@@ -5,17 +5,13 @@ import static org.mockito.Mockito.*;
 
 import com.example.dao.CartDAO;
 import com.example.dao.OrderDAO;
-import com.example.dto.OrderResponse;
+import com.example.dao.ProductDAO;
 import com.example.entities.Cart;
 import com.example.entities.CartItem;
 import com.example.entities.Customer;
 import com.example.entities.Order;
 import com.example.entities.Product;
-
-import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import com.example.entities.OrderItem;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -23,13 +19,21 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-public class OrderServiceTest {
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.List;
+
+class OrderServiceTest {
 
     @Mock
     private OrderDAO orderDAO;
 
     @Mock
     private CartDAO cartDAO;
+
+    @Mock
+    private ProductDAO productDAO;
 
     @InjectMocks
     private OrderService orderService;
@@ -39,105 +43,133 @@ public class OrderServiceTest {
         MockitoAnnotations.openMocks(this);
     }
 
-    private Cart buildSampleCart() {
+    // --- createOrderFromCartDto ---
+
+    @Test
+    void testCreateOrderFromCart_Success() {
         Customer customer = new Customer();
-        customer.setId(100L);
+        customer.setId(1L);
 
         Product product = new Product();
-        product.setId(200L);
-        product.setName("Test Product");
-        product.setPrice(new BigDecimal("10.00"));
+        product.setId(1L);
+        product.setPrice(new BigDecimal("100.00"));
+        product.setStock(1);
 
-        CartItem item = new CartItem();
-        item.setProduct(product);
-        item.setQuantity(2);
+        CartItem item = new CartItem(product, 1);
 
         Cart cart = new Cart();
         cart.setId(1L);
         cart.setCustomer(customer);
-        cart.setStatus("OPEN");
-        cart.setItems(Collections.singletonList(item));
+        cart.setItems(new ArrayList<>());
+        cart.getItems().add(item);
+        cart.setStatus("NEW");
 
-        return cart;
+        when(cartDAO.findById(Cart.class, 1L)).thenReturn(cart);
+        when(productDAO.findById(Product.class, 1L)).thenReturn(product);
+
+        // Mock orderDAO save to do nothing
+        doNothing().when(orderDAO).save(any(Order.class));
+        doNothing().when(cartDAO).update(any(Cart.class));
+        doNothing().when(productDAO).update(any(Product.class));
+
+        // Act
+        orderService.createOrderFromCartDto(1L);
+
+        // Assert entity-level effects
+        assertEquals("CHECKED_OUT", cart.getStatus());
+        assertEquals(0, product.getStock().compareTo(0)); // stock deducted
+        assertEquals(1, cart.getItems().get(0).getQuantity()); // cart item quantity remains
     }
 
     @Test
-    void testCreateOrderFromCartDto() {
-        Cart cart = buildSampleCart();
+    void testCreateOrderFromCart_EmptyCart_Throws() {
+        Cart cart = new Cart();
+        cart.setId(1L);
+        cart.setItems(new ArrayList<>());
+        cart.setStatus("NEW");
+
         when(cartDAO.findById(Cart.class, 1L)).thenReturn(cart);
 
-        OrderResponse response = orderService.createOrderFromCartDto(1L);
-
-        assertNotNull(response);
-        assertEquals("NEW", response.getStatus());
-        assertEquals(1, response.getItems().size());
-        verify(orderDAO, times(1)).save(any(Order.class));
-        verify(cartDAO, times(1)).update(cart);
+        Exception ex = assertThrows(IllegalArgumentException.class, () ->
+                orderService.createOrderFromCartDto(1L)
+        );
+        assertEquals("Cannot create order from empty cart", ex.getMessage());
     }
 
     @Test
-    void testUpdateStatusDto() {
-        Order order = new Order();
-        order.setId(1L);
-        order.setStatus("PENDING");
-
-        when(orderDAO.findById(Order.class, 1L)).thenReturn(order);
-
-        OrderResponse response = orderService.updateStatusDto(1L, "SHIPPED");
-
-        assertNotNull(response);
-        assertEquals("SHIPPED", response.getStatus());
-        verify(orderDAO, times(1)).update(order);
-    }
-
-    @Test
-    void testGetOrderDto() {
+    void testUpdateStatus_Success() {
         Order order = new Order();
         order.setId(1L);
         order.setStatus("NEW");
 
         when(orderDAO.findById(Order.class, 1L)).thenReturn(order);
+        doNothing().when(orderDAO).update(any(Order.class));
 
-        OrderResponse response = orderService.getOrderDto(1L);
+        orderService.updateStatusDto(1L, "SHIPPED");
 
-        assertNotNull(response);
-        assertEquals(1L, response.getId());
+        assertEquals("SHIPPED", order.getStatus());
     }
 
     @Test
-    void testGetAllOrderDtos() {
+    void testUpdateStatus_OrderNotFound_Throws() {
+        when(orderDAO.findById(Order.class, 1L)).thenReturn(null);
+
+        Exception ex = assertThrows(IllegalArgumentException.class, () ->
+                orderService.updateStatusDto(1L, "SHIPPED")
+        );
+        assertEquals("Order not found", ex.getMessage());
+    }
+
+    @Test
+    void testGetOrder_Success() {
+        Order order = new Order();
+        order.setId(1L);
+        order.setTotal(new BigDecimal("200.00"));
+
+        when(orderDAO.findById(Order.class, 1L)).thenReturn(order);
+
+        // just check the entity fields via DTO mapping
+        assertEquals(0, new BigDecimal("200.00").compareTo(orderService.getOrderDto(1L).getTotal()));
+    }
+
+    @Test
+    void testGetOrder_OrderNotFound_Throws() {
+        when(orderDAO.findById(Order.class, 1L)).thenReturn(null);
+
+        Exception ex = assertThrows(IllegalArgumentException.class, () ->
+                orderService.getOrderDto(1L)
+        );
+        assertEquals("Order not found", ex.getMessage());
+    }
+
+    @Test
+    void testGetAllOrders_Success() {
         Order order1 = new Order();
-        order1.setId(1L);
         Order order2 = new Order();
-        order2.setId(2L);
+        List<Order> orders = List.of(order1, order2);
 
-        when(orderDAO.findAll(Order.class)).thenReturn(Arrays.asList(order1, order2));
+        when(orderDAO.findAll(Order.class)).thenReturn(orders);
 
-        List<OrderResponse> responses = orderService.getAllOrderDtos();
-
-        assertEquals(2, responses.size());
-        assertEquals(1L, responses.get(0).getId());
-        assertEquals(2L, responses.get(1).getId());
+        assertEquals(2, orderService.getAllOrderDtos().size());
     }
 
     @Test
-    void testGetOrdersByCustomerDto() {
+    void testGetOrdersByCustomer_Success() {
         Customer customer = new Customer();
-        customer.setId(100L);
+        customer.setId(1L);
 
         Order order1 = new Order();
-        order1.setId(1L);
         order1.setCustomer(customer);
-
         Order order2 = new Order();
-        order2.setId(2L);
         order2.setCustomer(customer);
 
-        when(orderDAO.findAll(Order.class)).thenReturn(Arrays.asList(order1, order2));
+        List<Order> orders = List.of(order1, order2);
 
-        List<OrderResponse> responses = orderService.getOrdersByCustomerDto(100L);
+        when(orderDAO.findAll(Order.class)).thenReturn(orders);
 
-        assertEquals(2, responses.size());
-        assertTrue(responses.stream().allMatch(o -> o.getId() == 1L || o.getId() == 2L));
+        List<?> result = orderService.getOrdersByCustomerDto(1L);
+
+        assertEquals(2, result.size());
     }
 }
+
